vlib/v/checker/tests/unknown_generic_type.out
vlib/v/checker/tests/unknown_generic_type.vv:1:14: notice: unused parameter: `raw_data`
    1 | fn decode[T](raw_data string) ?T {
      |              ~~~~~~~~
    2 |     return none
    3 | }
vlib/v/checker/tests/unknown_generic_type.vv:6:13: error: unknown type `Foo`
    4 | 
    5 | fn main() {
    6 |     x := decode[Foo]('{"name": "test"}')?
      |                ~~~~~
    7 |     println(x)
    8 | }
